--- a/examples/elk/docker-compose.yml
+++ b/examples/elk/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     #ports:
     #    - "5601:5601"
     environment:
-      ELASTICSEARCH_URL: http://192.168.99.100:9200
+      ELASTICSEARCH_URL: http://elasticsearch:9200
       ELASTICSEARCH_USERNAME: elastic
       ELASTICSEARCH_PASSWORD: changeme
 
